welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: type NORTH is not a member of object plm.universe.Direction
		setDirection(dir:Direction.NORTH)
                                           ^